src/styles.css
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    font-family: serif;
    font-size: 1.1rem;
    overflow: hidden;
}

img {
    -webkit-filter: invert(1);
    filter: invert(1);
}

body{
    background-color: #F9F5EB;
}

button {
    background-color: #002B5B;
    color: white;
    border-radius: 15px;
    border-style: none;
}

button:hover{
    background-image: linear-gradient(rgb(0 0 0/40%) 0 0);
}

.button-alt-color {
    background-color: #EA5455;
}

button:active{
    box-shadow: inset 2px 2px 1px 1px rgba(0,0,0,0.70);
    padding-top: 2px;
    padding-left: 2px;
}

.login {
    position: fixed;
    height: 100%;
    width: 100%;
    top: 45%;
    text-align: center;
}

.login > button{
    width: 240px;
    height: 60px;
    border-radius: 15px;
    border-style: none;
}

.button-edit > * {
    margin-top: 3px;
    margin-left: -1px;
}

.button-delete {
    width: 30px;
    height: 30px;
    border-radius: 15px;
    border-style: none;
}

.button-delete > * {
    margin-top: 5px;
    margin-left: 2px;
}

.button-delete-back > * {
    margin-top: 3px;
    margin-left: -3px;
}

.button-delete-confirm > * {
    margin-top: 5px;
    margin-left: 2px;
}

.button-delete-confirm {
    background-color: #EA5455;
}

.add-with-delete {
    padding-right: 30px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 70px;
    margin: 5px;
    color: white;
}

.add-item-delete {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #EA5455;
    margin: 10px;
    width: 150px;
    height: 50px;
    border-radius: 15px;
    border-style: none;
}

.button-add-item, .button-tool-confirm {
    position: fixed;
    bottom: 20px;
    right: 20px;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    border-style: none;
    z-index: 2;
}

.button-add-item > * , .button-tool-confirm > * {
    margin-top: 3px;
    width: 25px;
    height: 25px;
}

.tools-container {
    position: fixed;
    bottom: 20px;
    right: 20px;
    border-radius: 25px;
    background-color: #002B5B;
    display: flex;
    flex-direction: column;
    overflow: hidden;
}

.button-tool {
    width: 50px;
    height: 50px;
    border-style: none;
    border-radius: 50%;
}

.button-tool > * {
    margin-top: 3px;
    width: 25px;
    height: 25px;
}

.tools-show {
    transition: height 0.1s;
    position: fixed;
    bottom: 20px;
    right: 20px;
    width: 50px;
    height: 200px;
}

.tools-hide {
    transition: height 0.1s;
    height: 50px;
}

.tools-search {
    position: fixed;
    bottom: 20px;
    right: 20px;
    height: 50px;
    background-color: #002B5B;
    border-radius: 25px;
    border-style: none;
    z-index: 2;
    color: white;
    display: flex;
    align-items: center;
    overflow: hidden;
}

.search-input {
    margin-left: 10px;
    width: 100%;
}

.search-bar-icon > *{
    margin-top: 5px;
    margin-left: 10px;
    width: 25px;
    height: 25px;
}

.search-show {
    transition: width 0.1s;
    width: 70%;
}

.search-hide {
    transition: width 0.1s;
    width: 50px;
}

.filter-main {
    padding-top: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

.filter-item-list {
    margin-top: 20px;
}

.filter-choice {
    border-style: none;
    border-radius: 25px;
}

.filter-item-bubble-inner {
    display: flex;
    align-items: center;
    width: 280px;
    height: 70px;
    border-style: none;
    border-radius: 15px;
    color: white;
}

.nav-main {
    background-color: #E4DCCF;
    position: fixed;
    display: flex;
    border-bottom-right-radius: 15px;
    z-index: 99;
}

.nav-show {
    transition: width 0.1s, height 0.2s;
    width: 200px;
    height: 100%;
}

.nav-hide {
    transition: width 0.2s, height 0.1s;
    width: 50px;
    height: 50px;
}

.nav-toggle-button {
    position: fixed;
    width: 50px;
    height: 50px;
    border-radius: 0px 0px 15px 0px;
    border-style: none;
}

.nav-button-list {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow-x: auto;
    scrollbar-width: thin;
    padding-top: 45px;
}

.nav-button-list > button {
    width: 60%;
    min-height: 50px;
    margin: 10px;
    border-style: none;
    border-radius: 15px;
}

.set-range-main {
    display: flex;
    flex-direction: column;
    padding-top: 20px;
    align-items: center;
}

.set-range-main > h1 {
    margin-bottom: 20px;
}

.set-range-main > button {
    width: 150px;
    height: 30px;
    margin-top: 20px;
    border-style: none;
    border-radius: 15px;
}

.set-range-input {
    display: flex;
    margin: 5px;
}

.set-range-input > p {
    margin-right: 5px;
}

.profile-main {
    display: flex;
    flex-direction: column;
    padding-top: 20px;
    align-items: center;
}

.profile-heading {
    display: flex;
    align-items: center;
    flex-direction: column;
}

.profile-heading > img {
    border-radius: 50%;
    -webkit-filter: invert(0);
    filter: invert(0);
}

.icon-image {
    width: 32px;
    height: 32px;
}

.profile-item-list {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 20px;
}

.profile-new-item-button {
    margin: 10px;
    width: 150px;
    height: 50px;
    border-radius: 15px;
    border-style: none;
}

.profile-item-bubble {
    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 70px;
    margin: 5px;
    color: white;
}

.profile-item-bubble > button {
    width: 30px;
    height: 30px;
    border-radius: 15px;
    border-style: none;
}

.item-bubble-inner {
    display: flex;
    align-items: center;
    width: 280px;
    height: 70px;
    border-style: none;
    border-radius: 15px;
    color: white;
    margin: 5px;
}

.item-bubble-inner > * {
    margin-left: 15px;
}
/* ... */

